data/test/type_check/fail/declaration_3.v
localparam x = 0;
localparam x = 0;
